Add new option classes for parameter storage